--- a/styles/react-notion-x-custom-styles.css
+++ b/styles/react-notion-x-custom-styles.css
@@ -171,60 +171,26 @@
   align-items: flex-start;
 }
 
-.notion-aside {
-  position: sticky;
-  top: 148px;
-  z-index: 101;
-  /* top: calc((100vh - 48px - 100%) / 2); */
-
-  align-self: flex-start;
-  flex: 1;
-
-  display: none;
-  flex-direction: column;
-  align-items: center;
-}
-
-.notion-aside-table-of-contents {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-height: calc(100vh - 148px - 16px);
-  min-width: 222px;
-  overflow: auto;
-  background: var(--bg-color);
-  border-radius: 4px;
-}
-
-.notion-aside-table-of-contents-header {
-  text-transform: uppercase;
-  font-weight: 400;
-  font-size: 1.1em;
-  word-break: break-word;
-}
-
-.notion-aside-table-of-contents .notion-table-of-contents-item {
+.notion-table-of-contents-item {
   line-height: 1;
 }
-
-.notion-aside-table-of-contents
-  .notion-table-of-contents-item-indent-level-0:first-of-type {
+.notion-table-of-contents-item-indent-level-0:first-of-type {
   margin-top: 0;
 }
 
-.notion-aside-table-of-contents .notion-table-of-contents-item-indent-level-0 {
+.notion-table-of-contents-item-indent-level-0 {
   margin-top: 0.25em;
 }
 
-.notion-aside-table-of-contents .notion-table-of-contents-item-indent-level-1 {
+.notion-table-of-contents-item-indent-level-1 {
   font-size: 13px;
 }
 
-.notion-aside-table-of-contents .notion-table-of-contents-item-indent-level-2 {
+.notion-table-of-contents-item-indent-level-2 {
   font-size: 12px;
 }
 
-.notion-aside-table-of-contents .notion-table-of-contents-item-body {
+.notion-table-of-contents-item-body {
   border: 0 none;
 }
 
@@ -669,7 +635,7 @@ svg.notion-page-icon {
   width: 100%;
   white-space: pre-wrap;
   word-break: break-word;
-  border-left: 6px solid currentcolor;
+  border-left: 6px solid #767676;
   padding: 0.2em 0.9em;
   margin: 6px 0;
   font-size: 1.05em;
@@ -1737,7 +1703,6 @@ svg.notion-page-icon {
   transition: background 20ms ease-in 0s;
   cursor: pointer;
   width: 100%;
-  border-radius: 0.5rem; /* 8px */
 
   padding: 6px;
   /* default --- font-size: 14px; */
@@ -1752,16 +1717,79 @@ svg.notion-page-icon {
 }
 
 .notion-table-of-contents-item:hover {
-  /*  default: background: var(--bg-color-0);
-      opacity: 1; */
   color: rgb(31 41 55);
-  background-color: rgb(255 255 255);
-  border-radius: 0.5rem; /* 8px */
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   opacity: 1;
 }
 
 .notion-table-of-contents-item-body {
+  border-bottom: 1px solid var(--fg-color-1);
+}
+
+
+/*
+ * aside 目录item动画效果编写
+*/
+
+
+.notion-aside-table-of-contents-item {
+  position: relative;
+  color: var(--fg-color);
+  opacity: 0.7;
+  transition: background 100ms ease-in, opacity 100ms ease-in;
+
+  text-decoration: none;
+  user-select: none;
+  transition: background 20ms ease-in 0s;
+  cursor: pointer;
+  width: clamp(220px,100%,28rem);/* 448px */
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+
+  padding: 6px;
+  /* default --- font-size: 14px; */
+  font-size: 16px;
+  line-height: 1.3;
+  display: flex;
+  align-items: center;
+}
+
+/* .notion-aside-table-of-contents-item:hover {
+  color: rgb(31 41 55);
+  background-color: rgb(255 255 255);
+  opacity: 1;
+} */
+
+.notion-aside-table-of-contents-item::before {
+  position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	width: 100%;
+	height: 100%;
+	background: #dddddd;
+  border-radius: 0.125rem; /* 2px */
+	content: '';
+	-webkit-transition: -webkit-transform 0.8s ease-in-out;
+	transition: transform 0.8s ease-in-out;
+  transition-delay: 0.1s;
+	-webkit-transform: scaleY(0.618) translateX(-100%);
+	transform: scaleY(0.618) translateX(-100%);
+}
+
+.notion-aside-table-of-contents-item:hover {
+  color: #18181B;
+  opacity: 1;
+}
+
+.notion-aside-table-of-contents-item:hover::before,
+.notion-aside-table-of-contents-item:focus::before {
+  -webkit-transform: scaleY(0.618) translateX(0);
+	transform: scaleY(0.618) translateX(0);
+}
+
+.notion-aside-table-of-contents-item-body {
   border-bottom: 1px solid var(--fg-color-1);
 }
 
